Make sure box shadow isn't cut off

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_form.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_form.scss
@@ -6,6 +6,7 @@
     border-radius: 1em !important;
     border: 1px solid $charcoal !important;
     box-shadow: rgba(0, 0, 0, .3) .2em .2em .75em;
+    margin-bottom: .5em !important;
 
     &.form-disabled {
         background-color: transparent;
